--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "@types/bun": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "@eslint/js": "^9.29.0",
+    "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
+    "eslint": "^9.29.0",
+    "typescript-eslint": "^8.34.0"
   }
 }
