--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
     "eslint": "^9.29.0",
-    "typescript-eslint": "^8.34.0"
+    "typescript-eslint": "^8.34.0",
+    "unbuild": "^3.5.0"
   }
 }
